chore: Removes deprecated API calls